full load is working